fixed out of box imgage

--- a/style.css
+++ b/style.css
@@ -62,7 +62,6 @@ body {
     align-items: center;
     justify-content: center;
     text-decoration: none;
-    height: auto;
     width: 100%;
     padding-top: 50px;
 }
@@ -72,15 +71,13 @@ Mastery
 */
 
 .content {
-    width: 80%;
-    height: 500px;
-    margin: 10px;
+    width: 85%;
 }
 
 .frame {
+    display: flexbox;
     background: rgb(30, 30, 159);
     border-radius: 0.8%;
-    display: block;
     height: 100%;
     margin: 8px;
 }
@@ -90,36 +87,39 @@ Mastery
     grid-template-columns: 1fr 1fr;
     align-items: center;
     justify-content: center;
-    height: calc(100%-80px);
 }
 
 .mastery-text {
+    background: rgb(255, 255, 255);
+    border-radius: 0.8%;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 24px;
-    height: 100%;
+    padding: 8px;
 }
 
 .mastery-img {
-    display: block;
     align-items: center;
     background: rgb(255, 255, 255);
     border-radius: 0.8%;
+
+    max-width: 100%;
+    max-height: 100%;
+    padding: 8px;
     margin: 8px;
 }
 
 img[src*="images/maplestoryNext.png"] {
     max-width: 100%;
     max-height: 100%;
-    box-shadow: 0 16px 20px 0 rgba(0, 0, 0, 0.3), 0 17px 50px 0 rgba(0, 0, 0, 0.2);
+    /* box-shadow: 0 16px 20px 0 rgba(0, 0, 0, 0.3), 0 17px 50px 0 rgba(0, 0, 0, 0.2); */
 }
 
 h2 {
     display: flex;
-    align-items: center;
-    text-align: center;
     justify-content: center;
+    align-items: center;
     font-size: 52px;
     font-family: sans-serif;
 
